--- a/style.css
+++ b/style.css
@@ -105,3 +105,17 @@ nav {
     max-width: 100%;
   }
 }
+#myBtn {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 4px;
+  display: block;
+  background-color: gold;
+  color: maroon;
+}
+button::hover{
+  background-color: goldenrod;
+}
